# petstore-generated-with-constraints

cloned-env/: .dockerignore  .gitignore  .spec.json  API_DOCUMENTATION.md  Dockerfile  README.md  mprocs.yaml  package.json  pnpm-lock.yaml  workflows.yaml
cloned-env/.github/workflows/: deploy.yml
cloned-env/data/: schema.sql  seed.db  seed.db-shm
cloned-env/mcp/: README.md  pyproject.toml
cloned-env/mcp/src/petstore_mcp/: __init__.py  client.py  server.py
cloned-env/server/: package.json  tsconfig.json
cloned-env/server/src/: index.ts
cloned-env/server/src/lib/: db.ts
cloned-env/server/src/routes/: pets.ts  store.ts  user.ts
