[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "petstore-mcp"
version = "0.1.0"
description = "MCP server for Petstore API"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0"
]
requires-python = ">=3.11"

[tool.uv]
dev-dependencies = []

[project.scripts]
petstore-mcp = "petstore_mcp.server:main"